# loan-affordability-service

./: .gitignore  README.md  pyproject.toml
src/loan_affordability/: main.py  service.py
tests/: test_service.py
