[project]
name = "loan-affordability-checker"
version = "0.1.0"
description = "An extensible Python service built for automated loan affordability assessment and lending decisioning."
authors = [
    {name = "Erfan Ghoreishi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pandera>=0.18",
    "pyyaml>=6.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.3"
    ]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"