[tool.poetry]
name = "loan-affordability-checker"
version = "0.1.0"
description = "An extensible Python service built for automated loan affordability assessment and lending decisioning."
authors = ["Erfan Ghoreishi"]
readme = "README.md"
packages = [{include = "loan_affordability", from = "src"}]


[tool.poetry.scripts]
loan-check = "loan_affordability.main:evaluate_affordability"

[tool.poetry.dependencies]
python = ">=3.12"
click = ">=8.1"
pydantic = ">=2.5"
pandera = ">=0.18"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"